--- a/front/src/app/dash.component.html
+++ b/front/src/app/dash.component.html
@@ -1,7 +1,33 @@
-<div class="jumbotron">
-  <h1>Hello, world!</h1>
-  <p>
-    dash works!
-  </p>
-  <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+<div class="row">
+  <div class="col-md-4">
+      <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h3 class="panel-title">Maiores gastos por Categoria</h3>
+          </div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+  </div>
+  <div class="col-md-4">
+      <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h3 class="panel-title">Maiores gastos por Tipo</h3>
+          </div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+  </div>
+  <div class="col-md-4">
+      <div class="panel panel-danger">
+          <div class="panel-heading">
+            <h3 class="panel-title">Total de Gastos no mês</h3>
+          </div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+  </div>
 </div>
+<app-registry></app-registry>
