--- a/front/src/app/type/type.component.html
+++ b/front/src/app/type/type.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h1>Tipos <small>tipos de lançamentos</small></h1>
 
-  <div class="panel panel-primary">
+  <div class="panel panel-primary" *ngIf="enableEdit">
     <div class="panel-body">
       <form action="" #typeForm = "ngForm" (ngSubmit)="onSave(typeForm)">
         <div class="col-md-2">
@@ -34,16 +34,16 @@
     </div>
   </div>
 
-  <div class="table-responsive">
+  <div class="table-responsive" *ngIf="!enableEdit">
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
           <th class="col-md-1 text-center">ID</th>
           <th>Nome</th>
           <th class="col-md-1 text-center">
-            <a href="#" class="btn btn-sm btn-primary">
+            <button href="#" class="btn btn-sm btn-primary" (click)="onNew()" >
                 <i class="fa fa-plus"></i> Novo
-            </a>
+            </button>
           </th>
         </tr>
       </thead>
@@ -52,8 +52,8 @@
           <td class="text-center">{{obj.id}}</td>
           <td>{{obj.name}}</td>
           <td class="text-center">
-            <a href="#" class="btn btn-sm btn-warning"><i class="fa fa-pencil"></i></a>
-            <a href="#" class="btn btn-sm btn-danger"><i class="fa fa-trash"></i></a>
+            <button href="#" class="btn btn-sm btn-warning" (click)="onFind(obj.id)" ><i class="fa fa-pencil"></i></button>
+            <button href="#" class="btn btn-sm btn-danger" (click)="onDelete(obj.id)" ><i class="fa fa-trash"></i></button>
           </td>
         </tr>
       </tbody>
