--- a/front/src/app/category/category.component.html
+++ b/front/src/app/category/category.component.html
@@ -1,40 +1,108 @@
 <div class="page-header">
-    <h1>Categorias <small>categorias de lançamentos</small></h1>
+    <h1>
+      Categorias <small>categorias de lançamentos</small>
+      <button type="button"
+              *ngIf="enableEdit"
+              class="btn btn-default btn-sm pull-right"
+              (click)="onList()"
+              title="Visualizar lista de Categorias...">
+        <i class="fa fa-tasks"></i>
+      </button>
+      <button type="button"
+              class="btn btn-success btn-sm pull-right"
+              (click)="onRefresh()"
+              title="Atualizar a tela...">
+        <i class="fa fa-refresh"></i>
+      </button>
+      <button type="button"
+              class="btn btn-primary btn-sm pull-right"
+              (click)="onNew()"
+              *ngIf="enableEdit && category.id"
+              title="Nova Categoria...">
+        <i class="fa fa-plus"></i>
+      </button>
+
+    </h1>
+</div>
 
     <div class="panel panel-primary" *ngIf="enableEdit">
       <div class="panel-body">
         <form action="" #categoryForm = "ngForm" (ngSubmit)="onSave(categoryForm)">
-          <div class="col-md-2">
-            <label for="inputId">ID:</label>
-            <input type="text"
-                   id="inputId"
-                   class="form-control"
-                   [(ngModel)] = "category.id"
-                   name="id"
-                   readonly="readonly" />
-          </div>
-          <div class="col-md-8">
-              <label for="inputName">Nome:</label>
+
+          <div class="row">
+
+            <div class="col-md-2">
+              <label for="inputId">ID:</label>
               <input type="text"
-                     id="inputName"
-                     class="form-control"
-                     [(ngModel)] = "category.name"
-                     name="name"
-                     placeholder="Name" autofocus />
-          </div>
-          <div class="col-md-2">
-            <label>&nbsp;</label>
-            <button type="submit"
-                    class="btn btn-primary btn-block"
-                    [disabled]="!categoryForm.form.valid">
-                <i class="fa fa-save"></i> Salvar
-            </button>
-          </div>
+                    id="inputId"
+                    class="form-control"
+                    [(ngModel)] = "category.id"
+                    name="id"
+                    readonly="readonly" />
+            </div>
+            <div class="col-md-8">
+                <label for="inputName">Nome:</label>
+                <input type="text"
+                      id="inputName"
+                      class="form-control"
+                      [(ngModel)] = "category.name"
+                      name="name"
+                      placeholder="Name" autofocus />
+            </div>
+            <div class="col-md-2">
+              <label>&nbsp;</label>
+              <button type="submit"
+                      class="btn btn-primary btn-block"
+                      [disabled]="category.patterns && category.patterns.length === 0">
+                  <i class="fa fa-save"></i> Salvar
+              </button>
+            </div>
+
+          </div><!-- /row -->
+
+          <br>
+          <div class="row">
+              <div class="col-md-12">
+                <div class="input-group">
+                  <input type="text" class="form-control" name="pattern" [(ngModel)]="pattern" placeholder="Digite um pattern...">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button" (click)="onAddPattern()">
+                      <i class="fa fa-plus"></i>
+                    </button>
+                  </span>
+                </div><!-- /input-group -->
+              </div><!-- /col-md-12 -->
+          </div><!-- /row -->
+
+            <br>
+
+            <div class="row" *ngIf="category.patterns">
+              <div class="col-md-12">
+                <div class="table-responsive">
+                  <table class="table table-bordered">
+                    <tbody>
+                      <tr *ngFor="let p of category.patterns">
+                        <td>
+                          {{p}}
+                          <button type="button"
+                                  class="btn btn-danger btn-xs pull-right"
+                                  (click)="onDeletePattern(p)"
+                                  title="Deletar pattern...">
+                            <i class="fa fa-minus"></i>
+                          </button>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div><!-- /table-responsive -->
+              </div><!-- /col-md-12 -->
+            </div><!-- /row -->
+
         </form>
       </div>
     </div>
 
-    <div class="table-responsive" *ngIf="!enableEdit">
+    <div class="table-responsive" *ngIf="!enableEdit" style="width:100%; height:400px; overflow: auto;">
       <table class="table table-striped table-bordered table-hover">
         <thead>
           <tr>
@@ -59,5 +127,3 @@
         </tbody>
       </table>
     </div>
-
-  </div>
