--- a/front/src/app/type/type.component.html
+++ b/front/src/app/type/type.component.html
@@ -1,13 +1,35 @@
 <div class="page-header">
-  <h1>Tipos <small>tipos de lançamentos</small></h1>
+  <h1>
+    Tipos <small>tipos de lançamentos</small>
+    <button type="button"
+            *ngIf="enableEdit"
+            class="btn btn-default btn-sm pull-right"
+            (click)="onList()"
+            title="Visualizar lista de Tipos...">
+      <i class="fa fa-tasks"></i>
+    </button>
+    <button type="button"
+            class="btn btn-success btn-sm pull-right"
+            (click)="onRefresh()"
+            title="Atualizar a tela...">
+      <i class="fa fa-refresh"></i>
+    </button>
+    <button type="button"
+            class="btn btn-primary btn-sm pull-right"
+            (click)="onNew()"
+            *ngIf="enableEdit && type.id"
+            title="Novo Tipo...">
+      <i class="fa fa-plus"></i>
+    </button>
+  </h1>
 </div>
 
   <div class="panel panel-primary" *ngIf="enableEdit">
     <div class="panel-body">
-      <form action="" #typeForm = "ngForm" (ngSubmit)="onSave(typeForm)">
+      <form action="" #typeForm = "ngForm" (ngSubmit)="onSave()">
 
         <div class="row">
-          <div class="col-md-2">
+          <div class="col-md-3">
             <label for="inputId">ID:</label>
             <input type="text"
                   id="inputId"
@@ -15,8 +37,8 @@
                   [(ngModel)] = "type.id"
                   name="id"
                   readonly="readonly" />
-          </div>
-          <div class="col-md-8">
+          </div><!-- /col-md-3 -->
+          <div class="col-md-7">
               <label for="inputName">Nome:</label>
               <input type="text"
                     id="inputName"
@@ -25,51 +47,66 @@
                     name="name"
                     required="required"
                     placeholder="Name" autofocus />
-          </div>
+          </div><!-- /col-md-9 -->
           <div class="col-md-2">
-              <label>&nbsp;</label>
-              <button type="submit"
-                      class="btn btn-primary btn-block"
-                      [disabled]="type.patterns.length==0">
-                  <i class="fa fa-save"></i> Salvar
-              </button>
-          </div>
-        </div>
+            <label>&nbsp;</label>
+            <button type="submit"
+                    class="btn btn-primary btn-block"
+                    [disabled]="type.patterns && type.patterns.length === 0"
+                    title="Salvar o Tipo...">
+                <i class="fa fa-save"></i> Salvar
+            </button>
+          </div><!-- /col-md-2 -->
+
+        </div><!-- /row -->
 
         <br>
 
         <div class="row">
           <div class="col-md-12">
-              <div class="input-group">
-                <input type="text" class="form-control" name="pattern" [(ngModel)]="pattern" placeholder="Digite um pattern...">
-                <span class="input-group-btn">
-                  <button class="btn btn-default" type="button" (click)="onAddPattern()">
-                      <i class="fa fa-plus"></i>
-                  </button>
-                </span>
-              </div>
-          </div>
+            <div class="input-group">
+              <input type="text" class="form-control" name="pattern" [(ngModel)]="pattern" placeholder="Digite um pattern...">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button" (click)="onAddPattern()">
+                  <i class="fa fa-plus"></i>
+                </button>
+              </span>
+            </div><!-- /input-group -->
+          </div><!-- /col-md-12 -->
+        </div><!-- /row -->
 
-        </div>
+        <br>
 
         <div class="row" *ngIf="type.patterns">
           <div class="col-md-12">
-            <table class="table table-bordered">
-              <tbody class="text-center">
-                <tr *ngFor="let p of type.patterns">
-                  <td>{{p}}</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
+            <div class="table-responsive">
+              <table class="table table-bordered">
+                <tbody>
+                  <tr *ngFor="let p of type.patterns">
+                    <td>
+                      {{p}}
+                      <button type="button"
+                              class="btn btn-danger btn-xs pull-right"
+                              (click)="onDeletePattern(p)"
+                              title="Deletar pattern...">
+                        <i class="fa fa-minus"></i>
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div><!-- /table-responsive -->
+          </div><!-- /col-md-12 -->
+        </div><!-- /row -->
 
       </form>
-    </div>
-  </div>
+
+    </div><!-- /panel-body -->
+
+  </div><!-- /panel panel-primary -->
 
 
-  <div class="table-responsive" *ngIf="!enableEdit">
+  <div class="table-responsive" *ngIf="!enableEdit" style="width:100%; height:400px; overflow: auto;">
     <table class="table table-striped table-bordered table-hover">
       <thead>
         <tr>
@@ -87,11 +124,21 @@
           <td class="text-center">{{obj.id}}</td>
           <td>{{obj.name}}</td>
           <td class="text-center">
-            <button href="#" class="btn btn-sm btn-warning" (click)="onFind(obj.id)" ><i class="fa fa-pencil"></i></button>
-            <button href="#" class="btn btn-sm btn-danger" (click)="onDelete(obj.id)" ><i class="fa fa-trash"></i></button>
+            <button href="#"
+                    class="btn btn-sm btn-warning"
+                    (click)="onFind(obj.id)"
+                    title="Editar o Tipo...">
+                <i class="fa fa-pencil"></i>
+              </button>
+            <button href="#"
+                    class="btn btn-sm btn-danger"
+                    (click)="onDelete(obj.id)"
+                    title="Deletar o Tipo...">
+              <i class="fa fa-trash"></i>
+            </button>
           </td>
         </tr>
       </tbody>
     </table>
-  </div>
+  </div><!-- /table-responsive -->
 
