--- a/front/src/app/menu/menu.component.html
+++ b/front/src/app/menu/menu.component.html
@@ -36,6 +36,11 @@
               <i class="fa fa-list"></i> Tipos
             </a>
         </li>
+        <li [routerLinkActive]="['active']">
+          <a [routerLink]="['/upload']" href="#">
+            <i class="fa fa-upload"></i> Upload
+          </a>
+      </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
           <li class="dropdown">
