--- a/front/src/app/menu/menu.component.html
+++ b/front/src/app/menu/menu.component.html
@@ -9,7 +9,8 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" [routerLink]="['/']" href="#">
-        Spending
+        <!-- Spending -->
+        <img src="../../assets/img/spending-logo.png" alt="Spending Logo" height="100%" title="Spending">
       </a>
     </div>
 
