--- a/front/src/app/registry/registry.component.html
+++ b/front/src/app/registry/registry.component.html
@@ -104,6 +104,8 @@
       <tr>
         <th class="col-md-1 text-center">ID</th>
         <th>Nome</th>
+        <th>Categoria</th>
+        <th>Tipo</th>
         <th>Data</th>
         <th>Valor</th>
         <th class="col-md-1 text-center">
@@ -115,6 +117,8 @@
       <tr *ngFor="let obj of registries">
         <td class="text-center">{{obj.id}}</td>
         <td>{{obj.description}}</td>
+        <td>{{obj.category.name}}</td>
+        <td>{{obj.type.name}}</td>
         <!-- <td>{{obj.date | date:'dd/MM/yyyy'}}</td> -->
         <td>{{obj.date}}</td>
         <td>{{obj.value | currency:'BRL':true:'1.2-2'}}</td>
