--- a/front/src/app/type/type.component.html
+++ b/front/src/app/type/type.component.html
@@ -1,6 +1,7 @@
 <div class="page-header">
   <h1>
     Tipos <small>tipos de lançamentos</small>
+    <span class="badge">{{typesLength}}</span>
     <button type="button"
             *ngIf="enableEdit"
             class="btn btn-default btn-sm pull-right"
