--- a/front/src/app/category/category.component.html
+++ b/front/src/app/category/category.component.html
@@ -1,6 +1,7 @@
 <div class="page-header">
     <h1>
       Categorias <small>categorias de lançamentos</small>
+      <span class="badge">{{categoriesLength}}</span>
       <button type="button"
               *ngIf="enableEdit"
               class="btn btn-default btn-sm pull-right"
