--- a/front/src/app/registry/registry.component.html
+++ b/front/src/app/registry/registry.component.html
@@ -1,6 +1,7 @@
 <div class="page-header">
   <h1>
     Lançamentos <small>lançamentos financeiro mensal</small>
+    <span class="badge">{{registriesLength}}</span>
     <button type="button"
             *ngIf="enableEdit"
             class="btn btn-default btn-sm pull-right"
